--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,58 +9,54 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Title -->
 	<title>דה דה בום - צפריר ליכטנשטיין</title>
-	<!--
-      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-      Copyright (c) 2017 - Hamza Mensouri - https://themeforest.net/user/hamza_mensouri
-      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-      -->
 	<!-- Description Meta -->
 	<meta name="description" content="Yala is a Personal Portfolio Template">
 	<meta name="keywords" content="responsive, resume, html, personal, onepage personal, blog">
 	<meta name="author" content="Hamza Mensouri">
 	<!-- Favicon Icon -->
-	<link rel="shortcut icon" href="img/favicon/favicon.ico">
+	<link rel="shortcut icon" href="/img/favicon/favicon.ico">
 	<!-- Styles -->
-	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<!-- Bootstrap -->
-	<link rel="stylesheet" href="css/font-awesome.min.css"/>
+	<link rel="stylesheet" href="/css/font-awesome.min.css"/>
 	<!-- Font-Awesome icons -->
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="/css/animate.css">
 	<!-- Animate CSS -->
-	<link href="css/magnific-popup.css" rel="stylesheet">
+	<link rel="stylesheet" href="/css/magnific-popup.css">
 	<!-- Magnific-Popup Plugin CSS -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
 	<!-- Main CSS -->
-	<link rel="stylesheet" href="css/responsive.css">
+	<link rel="stylesheet" href="/css/responsive.css">
+
 	<!-- Responsive CSS -->
 	<!--[if lt IE 9]>
 	<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"/>
 	<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"/>
 	<![endif]-->
+
+	<!--====== Scripts ======-->
+	<!-- Bootstrap and jQuery scripts -->
+	<script src="/js/jquery.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<!-- Main script -->
+	<script src="/js/plugins.js"></script>
+	<!-- Other scripts -->
+	<script src="/js/jquery.magnific-popup.min.js"></script>
+	<script src="/js/jquery.countTo.js"></script>
+	<script src="/js/jquery.smooth-scroll.min.js"></script>
+	<script src="/js/modernizr.custom.js"></script>
+	<!-- Google Map scripts -->
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwWfMRMTV4Gifrym8XPE5HLOKdmW7vl1U&amp;libraries=places&amp;"></script>
+	<!-- wow scripts -->
+	<script src="/js/wow.min.js"></script>
+	<!-- Contact script -->
+	<script src="/js/contact.js"></script>
 </head>
 
 <body id="page-top" data-spy="scroll">
 
 <div id="app"></div>
-
-<!--====== Scripts ======-->
-<!-- Bootstrap and jQuery scripts -->
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<!-- Main script -->
-<script src="js/plugins.js"></script>
-<!-- Other scripts -->
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.countTo.js"></script>
-<script src="js/jquery.smooth-scroll.min.js"></script>
-<script src="js/modernizr.custom.js"></script>
-<!-- Google Map scripts -->
-<script
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAwWfMRMTV4Gifrym8XPE5HLOKdmW7vl1U&amp;libraries=places&amp;"></script>
-<!-- wow scripts -->
-<script src="js/wow.min.js"></script>
-<!-- Contact script -->
-<script src="js/contact.js"></script>
 
 </body>
 
